# submission

./: LICENSE  README.md  mise.toml
pulselink/: index.html  package-lock.json  package.json  vite.config.js
pulselink/server/: index.js  package.json
pulselink/server/presage/: CMakeLists.txt  Dockerfile  presage_spot.cpp
pulselink/server/routes/: notify.js  vitals.js
pulselink/src/: App.jsx  index.css  main.jsx
pulselink/src/components/: Analysis.jsx  Capture.jsx  ChatInterface.jsx  Dashboard.jsx  FirstAidSteps.jsx  Home.jsx  IncidentReport.jsx  InjuryPanel.jsx  RiskFlags.jsx  SeverityBanner.jsx  VitalsPanel.jsx  VoiceAgent.jsx
pulselink/src/context/: TriageContext.jsx
pulselink/src/hooks/: useChat.js  useVideoCapture.js
pulselink/src/services/: cloudinary.js  elevenlabs.js  frameExtractor.js  gemini.js  notify.js  presage.js
